--- a/src/main/resources/guac-manifest.json
+++ b/src/main/resources/guac-manifest.json
@@ -7,6 +7,10 @@
 
     "authProviders" : [
         "com.keepersecurity.kcm.guest.GuestAuthenticationProvider"
+    ],
+
+    "translations": [
+        "translations/en.json"
     ]
 
 }
